# SensitiveMaskerWin

./: README.md  pyproject.toml
packaging/: SensitiveMasker.spec  SensitiveMaskerCLI.spec
scripts/: generate_icon.py
src/cli/: main.py
src/gui/: app.py  settings.py
src/masking_core/: masker.py  matcher.py
tests/: test_gui_app.py  test_masker.py  test_matcher.py
tests/fixtures/: synthetic_logs.py
