[project]
name = "sensitive-masker"
version = "1.1.1"
description = "Locally mask sensitive info (phone numbers, passwords, IPs, etc.) in logs before pasting into an external LLM."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.10",
    "pillow>=10.4",
]

[project.scripts]
sensitive-masker-cli = "cli.main:main"
sensitive-masker-gui = "gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/masking_core", "src/cli", "src/gui"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
